better global support

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:watch": "mocha -w test/*.test.js --recursive"
   },
   "dependencies": {
+    "app-root-path": "^2.0.1",
     "body-parser": "^1.17.2",
     "cli-table": "^0.3.1",
     "commander": "^2.11.0",
