--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf-bot",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "author": "Esben Petersen <esbenspetersen@gmail.com>",
   "homepage": "https://github.com/esbenp/pdf-bot",
   "license": "MIT",
@@ -23,7 +23,6 @@
     "test:watch": "mocha -w test/*.test.js --recursive"
   },
   "dependencies": {
-    "app-root-path": "^2.0.1",
     "body-parser": "^1.17.2",
     "cli-table": "^0.3.1",
     "commander": "^2.11.0",
@@ -34,6 +33,7 @@
     "lodash.merge": "^4.6.0",
     "lowdb": "^0.16.2",
     "node-fetch": "^1.7.1",
+    "prompt": "^1.0.0",
     "s3": "^4.4.0",
     "uuid": "^3.1.0"
   },
