--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "assert": "^1.4.1",
+    "coveralls": "^2.13.1",
     "mocha": "^3.5.0",
     "proxyquire": "^1.8.0",
     "sinon": "^3.0.0",
