Add node version constraint

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "type": "git",
     "url": "https://github.com/esbenp/pdf-bot.git"
   },
+  "engines": {
+    "node": ">= 6"
+  },
   "description": "A Node queue API for generating PDFs using headless Chrome. Comes with a CLI, S3 storage and webhooks for notifying subscribers about generated PDFs",
   "main": "./src/index.js",
   "bin": "./bin/pdf-bot.js",
