--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "debug": "^2.6.8",
     "express": "^4.15.3",
     "html-pdf-chrome": "^0.2.0",
+    "lodash.chunk": "^4.2.0",
     "lodash.merge": "^4.6.0",
     "lowdb": "^0.16.2",
     "node-fetch": "^1.7.1",
