--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-pdf-chrome": "^0.2.0",
     "lodash.chunk": "^4.2.0",
     "lodash.merge": "^4.6.0",
+    "lodash.clonedeep": "^4.5.0",
     "lowdb": "^0.16.2",
     "node-fetch": "^1.7.1",
     "prompt": "^1.0.0",
