--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node-fetch": "^1.7.1",
     "pg": "^7.4.0",
     "prompt": "^1.0.0",
+    "puppeteer": "^1.7.0",
     "s3": "^4.4.0",
     "uuid": "^3.1.0"
   },
