--- a/package.json
+++ b/package.json
@@ -26,33 +26,30 @@
     "test:watch": "mocha -w test/*.test.js --recursive"
   },
   "dependencies": {
-    "aws-sdk": "^2.516.0",
-    "body-parser": "^1.17.2",
-    "bull": "^3.10.0",
-    "bull-arena": "^2.6.3",
-    "cli-table": "^0.3.1",
+    "aws-sdk": "^2.1314.0",
+    "body-parser": "^1.20.1",
+    "bull": "^4.10.4",
+    "bull-arena": "^3.30.3",
+    "cli-table": "^0.3.11",
     "commander": "3.0.0",
     "debug": "^2.6.8",
-    "express": "^4.15.3",
-    "html-pdf-chrome": "^0.4.2",
+    "express": "^4.18.2",
     "lodash.chunk": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
-    "lodash.merge": "^4.6.0",
-    "lowdb": "^0.16.2",
+    "lodash.merge": "^4.6.2",
     "node-fetch": "^1.7.1",
-    "pg": "^7.4.0",
-    "prompt": "^1.0.0",
-    "puppeteer": "^1.19.0",
+    "prompt": "^1.3.0",
+    "puppeteer": "19.7.0",
     "s3": "^4.4.0",
-    "uuid": "^3.1.0"
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "assert": "^1.4.1",
+    "assert": "^1.5.0",
     "coveralls": "^2.13.1",
     "mocha": "^3.5.0",
-    "nyc": "^11.1.0",
+    "nyc": "^11.9.0",
     "proxyquire": "^1.8.0",
     "sinon": "^3.0.0",
-    "supertest": "^3.0.0"
+    "supertest": "^3.4.2"
   }
 }
